third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-stable/diagnostic-not-implemented-issue-1296.stderr
error[E0277]: the trait bound `NotZerocopy: zerocopy::Immutable` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-issue-1296.rs:52:19
   |
52 |     Foo.write_obj(NotZerocopy(()));
   |         --------- ^^^^^^^^^^^^^^^ the trait `zerocopy::Immutable` is not implemented for `NotZerocopy`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `Foo::write_obj`
  --> tests/ui-stable/diagnostic-not-implemented-issue-1296.rs:58:21
   |
58 |     fn write_obj<T: Immutable + IntoBytes>(&mut self, _val: T) {}
   |                     ^^^^^^^^^ required by this bound in `Foo::write_obj`
help: consider borrowing here
   |
52 |     Foo.write_obj(&NotZerocopy(()));
   |                   +
52 |     Foo.write_obj(&mut NotZerocopy(()));
   |                   ++++

error[E0277]: the trait bound `NotZerocopy: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-stable/diagnostic-not-implemented-issue-1296.rs:52:19
   |
52 |     Foo.write_obj(NotZerocopy(()));
   |         --------- ^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `NotZerocopy`
   |         |
   |         required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `zerocopy::IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and $N others
note: required by a bound in `Foo::write_obj`
  --> tests/ui-stable/diagnostic-not-implemented-issue-1296.rs:58:33
   |
58 |     fn write_obj<T: Immutable + IntoBytes>(&mut self, _val: T) {}
   |                                 ^^^^^^^^^ required by this bound in `Foo::write_obj`
